# scim2-rs

./: Cargo.toml  README.md  clippy.toml
.github/workflows/: rust.yml
core/: Cargo.toml
core/src/: group.rs  in_memory_provider_store.rs  lib.rs  meta.rs  patch.rs  provider.rs  provider_store.rs  query_params.rs  resource.rs  response.rs  urn.rs  user.rs  utils.rs
src/: lib.rs  user.rs
test-client/: Cargo.toml
test-client/src/: lib.rs  tester.rs
test-provider-server/: Cargo.toml
test-provider-server/src/: groups.rs  lib.rs  main.rs  server.rs  users.rs
