[workspace]
resolver = "3"
members = [
    "core",
    "test-provider-server",
    "test-client",
]

[workspace.dependencies]
anyhow = "1.0"
async-recursion = "1.1.1"
async-trait = "0.1.88"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
display_error_chain = { version = "0.2.2"}
dropshot = { version = "0.16.2" }
# has to match dropshot
http = { version = "1.3.1" }
schemars = { version = "0.8.22", features = [ "chrono", "uuid" ] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0" }
slog = { version = "2.7" }
slog-async = { version = "2.8" }
slog-term = { version = "2.9" }
tokio = { version = "1.46", features = [ "full" ] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
chrono = "0.4.41"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
