[workspace]
resolver = "3"
members = [
    "core",
    "test-provider-server",
    "test-client",
]

[workspace.package]
edition = "2024"
license = "MPL-2.0"

[workspace.dependencies]
anyhow = "1.0"
async-recursion = "1.1.1"
chrono = "0.4.41"
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
dropshot = { version = "0.16.4" }
# has to match dropshot
http = { version = "1.3.1" }
iddqd = { version = "0.3.11" , features = ["schemars08"]}
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
schemars = { version = "0.8.22", features = [ "chrono" ] }
scim2-rs = { path = "./core" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0" }
slog = { version = "2.7" }
slog-async = { version = "2.8" }
slog-term = { version = "2.9" }
tokio = { version = "1.46", features = [ "full" ] }
trait-variant = { version = "0.1.2" }
unicase = { version = "2.8.1" }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
