[package]
name = "scim2-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
async-trait.workspace = true
anyhow.workspace = true
dropshot.workspace = true
http.workspace = true
uuid.workspace = true
chrono.workspace = true
