[package]
name = "scim2-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dropshot.workspace = true
http.workspace = true
iddqd.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
slog.workspace = true
trait-variant.workspace = true
unicase.workspace = true
uuid.workspace = true

[dev-dependencies]
scim2-test-provider-server = { path = "../test-provider-server" }
tokio.workspace = true
reqwest.workspace = true
