[package]
name = "scim2-rs"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dropshot.workspace = true
http.workspace = true
iddqd.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
slog.workspace = true
trait-variant.workspace = true
unicase.workspace = true
uuid.workspace = true

[dev-dependencies]
reqwest.workspace = true
scim2-test-provider-server = { path = "../test-provider-server" }
tokio.workspace = true
