[package]
name = "scim2-test-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
scim2-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
unicase.workspace = true
uuid.workspace = true

